Коммит предрелизной правки багов

--- a/RamblerSchoolTest/RamblerSchoolTest/Base.lproj/Main.storyboard
+++ b/RamblerSchoolTest/RamblerSchoolTest/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -22,7 +23,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Привет" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A4U-FQ-6cy">
-                                <rect key="frame" x="158" y="323" width="59" height="21"/>
+                                <rect key="frame" x="158" y="50" width="59" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -30,7 +31,7 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="A4U-FQ-6cy" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="oF3-Jn-Qtw"/>
+                            <constraint firstItem="A4U-FQ-6cy" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="50" id="gzm-gs-ORR"/>
                             <constraint firstItem="A4U-FQ-6cy" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="x3m-Y8-EW5"/>
                         </constraints>
                     </view>
